generated-out/vanilla/dear-imgui-raw-vanilla/src/DearImGui/Raw/ImGuiStorage.hsc

{-# LANGUAGE CApiFFI #-}
{-# LANGUAGE PatternSynonyms #-}
{-# OPTIONS_GHC -Wno-unused-imports #-}

-- This file was generated by dear-bindings-ffi. Do not edit by hand.
-- Haskell function names: lower the first character of the C name.
-- e.g. ImGui_Begin -> imGui_Begin

module DearImGui.Raw.ImGuiStorage where

import Foreign.C.String (CString)
import Foreign.C.Types
import Foreign.Marshal.Alloc (alloca)
import Foreign.Marshal.Utils (with)
import Foreign.Ptr (FunPtr, Ptr)
import Foreign.Storable (Storable (..))
import Data.Int (Int8, Int16, Int32, Int64)
import Data.Word (Word8, Word16, Word32, Word64)
import DearImGui.Raw.Types

#include "dcimgui_nodefaultargfunctions.h"

-- functions

-- C: void BuildSortByKey(ImGuiStorage* self)
foreign import capi unsafe "dcimgui_nodefaultargfunctions.h ImGuiStorage_BuildSortByKey"
  imGuiStorage_BuildSortByKey :: (Ptr ImGuiStorage) -> IO ()
-- C: void Clear(ImGuiStorage* self)
foreign import capi unsafe "dcimgui_nodefaultargfunctions.h ImGuiStorage_Clear"
  imGuiStorage_Clear :: (Ptr ImGuiStorage) -> IO ()
-- C: bool GetBool(const ImGuiStorage* self, ImGuiID key, bool default_val)
foreign import capi unsafe "dcimgui_nodefaultargfunctions.h ImGuiStorage_GetBool"
  imGuiStorage_GetBool :: (Ptr ImGuiStorage) -> ImGuiID -> CBool -> IO CBool
-- C: bool* GetBoolRef(ImGuiStorage* self, ImGuiID key, bool default_val)
foreign import capi unsafe "dcimgui_nodefaultargfunctions.h ImGuiStorage_GetBoolRef"
  imGuiStorage_GetBoolRef :: (Ptr ImGuiStorage) -> ImGuiID -> CBool -> IO (Ptr CBool)
-- C: float GetFloat(const ImGuiStorage* self, ImGuiID key, float default_val)
foreign import capi unsafe "dcimgui_nodefaultargfunctions.h ImGuiStorage_GetFloat"
  imGuiStorage_GetFloat :: (Ptr ImGuiStorage) -> ImGuiID -> CFloat -> IO CFloat
-- C: float* GetFloatRef(ImGuiStorage* self, ImGuiID key, float default_val)
foreign import capi unsafe "dcimgui_nodefaultargfunctions.h ImGuiStorage_GetFloatRef"
  imGuiStorage_GetFloatRef :: (Ptr ImGuiStorage) -> ImGuiID -> CFloat -> IO (Ptr CFloat)
-- C: int GetInt(const ImGuiStorage* self, ImGuiID key, int default_val)
foreign import capi unsafe "dcimgui_nodefaultargfunctions.h ImGuiStorage_GetInt"
  imGuiStorage_GetInt :: (Ptr ImGuiStorage) -> ImGuiID -> CInt -> IO CInt
-- C: int* GetIntRef(ImGuiStorage* self, ImGuiID key, int default_val)
foreign import capi unsafe "dcimgui_nodefaultargfunctions.h ImGuiStorage_GetIntRef"
  imGuiStorage_GetIntRef :: (Ptr ImGuiStorage) -> ImGuiID -> CInt -> IO (Ptr CInt)
-- C: void* GetVoidPtr(const ImGuiStorage* self, ImGuiID key)
foreign import capi unsafe "dcimgui_nodefaultargfunctions.h ImGuiStorage_GetVoidPtr"
  imGuiStorage_GetVoidPtr :: (Ptr ImGuiStorage) -> ImGuiID -> IO (Ptr ())
-- C: void** GetVoidPtrRef(ImGuiStorage* self, ImGuiID key, void* default_val)
foreign import capi unsafe "dcimgui_nodefaultargfunctions.h ImGuiStorage_GetVoidPtrRef"
  imGuiStorage_GetVoidPtrRef :: (Ptr ImGuiStorage) -> ImGuiID -> (Ptr ()) -> IO (Ptr (Ptr ()))
-- C: void SetAllInt(ImGuiStorage* self, int val)
foreign import capi unsafe "dcimgui_nodefaultargfunctions.h ImGuiStorage_SetAllInt"
  imGuiStorage_SetAllInt :: (Ptr ImGuiStorage) -> CInt -> IO ()
-- C: void SetBool(ImGuiStorage* self, ImGuiID key, bool val)
foreign import capi unsafe "dcimgui_nodefaultargfunctions.h ImGuiStorage_SetBool"
  imGuiStorage_SetBool :: (Ptr ImGuiStorage) -> ImGuiID -> CBool -> IO ()
-- C: void SetFloat(ImGuiStorage* self, ImGuiID key, float val)
foreign import capi unsafe "dcimgui_nodefaultargfunctions.h ImGuiStorage_SetFloat"
  imGuiStorage_SetFloat :: (Ptr ImGuiStorage) -> ImGuiID -> CFloat -> IO ()
-- C: void SetInt(ImGuiStorage* self, ImGuiID key, int val)
foreign import capi unsafe "dcimgui_nodefaultargfunctions.h ImGuiStorage_SetInt"
  imGuiStorage_SetInt :: (Ptr ImGuiStorage) -> ImGuiID -> CInt -> IO ()
-- C: void SetVoidPtr(ImGuiStorage* self, ImGuiID key, void* val)
foreign import capi unsafe "dcimgui_nodefaultargfunctions.h ImGuiStorage_SetVoidPtr"
  imGuiStorage_SetVoidPtr :: (Ptr ImGuiStorage) -> ImGuiID -> (Ptr ()) -> IO ()
